# LangStudy

./: README.md
Basic_calc_math/C/: ReadMe.txt
Basic_calc_math/C/examples/: 1D_integration.c  1D_interpolation.c  CMakeLists.txt  EulerMacLorenConst.c  LS_solve.c  MyBI.c  a.out  basic_type_test.c  exponenta.c  mpi_integ.c  stat.py  sum.c
Basic_calc_math/C/include/: Diagonal_matrix_solver.h  DirectGauss.h  basic_type.h  integration.h  interpolation.h
Basic_calc_math/C/lib/: DFT.c  basic_type.c  integration.c  interpolation.c  matmul.c
Basic_calc_math/C/lib/LinearSystemSolvers/: CG.c  Diagonal_matrix_solver.c  DirectGauss.c  Pentadiagonal_matrix_solver.c  Tridiagonal_matrix_solver.c
Basic_calc_math/CPP/: Fourier_transform.cpp  Pentadiagonal_matrix_solver.cpp  integration_cpp.cpp
